--- a/signin.html
+++ b/signin.html
@@ -60,15 +60,9 @@
           <li class="nav-item nav-effect ">
             <a class="nav-link" href="tournaments.html">Tournaments</a>
           </li>
-          <li class="nav-item nav-effect ">
-            <a class="nav-link" href="review.html">Review</a>
-          </li>
-          <li class="nav-item nav-effect">
-            <a class="nav-link" href="faq.html">FAQ</a>
-          </li>
           <li class="ms-1">
             <a class="rounded-pill btn custom-btn-secondary font-small primary-btn-effect"
-              href="signin.html">Account</a>
+              href="signin.html">Join Now</a>
           </li>
         </ul>
       </div>
