Chore: Img Changes & Style Changes

--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
             </div>
             <div class="row mt-5">
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-2" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-2" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
                   <figure class="mb-0 icon-bg">
                     <img
-                      src="assets/images/games/cricket.avif"
+                      src="assets/images/games/cricket.png"
                       class="img-fluid rounded-circle"
                       alt="Fantasy Games"
                     />
@@ -182,7 +182,7 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-2" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-2" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
@@ -206,13 +206,13 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-2" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-2" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
                   <figure class="mb-0 icon-bg">
                     <img
-                      src="assets/images/games/ludo.jpg"
+                      src="assets/images/games/ludo.png"
                       class="img-fluid rounded-circle"
                       alt="Fantasy Games"
                     />
@@ -228,7 +228,7 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-2" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-2" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
@@ -252,7 +252,7 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-2" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-2" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
@@ -276,7 +276,7 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-2" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-2" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
@@ -300,13 +300,13 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-2" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-2" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
                   <figure class="mb-0 icon-bg">
                     <img
-                      src="assets/images/games/casino.jpg"
+                      src="assets/images/games/game-icon10.png"
                       class="img-fluid rounded-circle"
                       alt="Fantasy Games"
                     />
@@ -324,7 +324,7 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-2" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-2" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
@@ -348,7 +348,7 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-2" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-2" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
@@ -372,7 +372,7 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-2" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-2" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
@@ -396,7 +396,7 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-2" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-2" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
@@ -418,7 +418,7 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-2" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-2" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
@@ -693,7 +693,7 @@
                 <img
                   class="cursor-pointer"
                   onclick="goToWhatsapp()"
-                  src="/html/assets/svg/WhatsAppButtonGreenLarge.svg"
+                  src="./assets//images/WhatsAppButtonGreenSmall.png"
                   alt="whatsapp"
                 />
               </div>
