--- a/games.html
+++ b/games.html
@@ -120,19 +120,19 @@
               </p>
             </div>
             <div class="row mt-5">
-              <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
                   <figure class="mb-0 icon-bg">
                     <img
-                      src="assets/images/games/game-icon01.png"
+                      src="assets/images/games/cricket.png"
                       class="img-fluid rounded-circle"
                       alt="Fantasy Games"
                     />
                   </figure>
                   <h3 class="h5 fw-bold theme-text-primary mb-3 mt-3">
-                    Fantasy
+                    Cricket
                   </h3>
                   <button
                     onclick="goToWhatsapp()"
@@ -144,41 +144,19 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
                   <figure class="mb-0 icon-bg">
                     <img
-                      src="assets/images/games/game-icon02.png"
-                      class="img-fluid rounded-circle"
-                      alt="Fantasy Games"
-                    />
-                  </figure>
-                  <h3 class="h5 fw-bold theme-text-primary mb-3 mt-3">Rummy</h3>
-                  <button
-                    onclick="goToWhatsapp()"
-                    class="rounded-pill btn custom-btn-primary primary-btn-effect"
-                    type="submit"
-                  >
-                    Play Now
-                  </button>
-                </div>
-              </div>
-              <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
-                <div
-                  class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
-                >
-                  <figure class="mb-0 icon-bg">
-                    <img
-                      src="assets/images/games/game-icon03.png"
+                      src="assets/images/games/football.jpg"
                       class="img-fluid rounded-circle"
                       alt="Fantasy Games"
                     />
                   </figure>
                   <h3 class="h5 fw-bold theme-text-primary mb-3 mt-3">
-                    Bike Racing
+                    Football
                   </h3>
                   <button
                     onclick="goToWhatsapp()"
@@ -190,15 +168,40 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
                   <figure class="mb-0 icon-bg">
                     <img
-                      src="assets/images/games/game-icon04.png"
+                      src="assets/images/games/ludo.png"
                       class="img-fluid rounded-circle"
                       alt="Fantasy Games"
+                    />
+                  </figure>
+                  <h3 class="h5 fw-bold theme-text-primary mb-3 mt-3">
+                    Ludo
+                  </h3>
+                  <button
+                    onclick="goToWhatsapp()"
+                    class="rounded-pill btn custom-btn-primary primary-btn-effect"
+                    type="submit"
+                  >
+                    Play Now
+                  </button>
+                </div>
+              </div>
+              <!-- repetable -->
+              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
+                <div
+                  class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
+                >
+                  <figure class="mb-0 icon-bg">
+                    <img
+                      src="assets/images/games/chess.png"
+                      class="img-fluid rounded-circle"
+                      alt="Speed Chess"
+                      style="max-width: 250px;"
                     />
                   </figure>
                   <h3 class="h5 fw-bold theme-text-primary mb-3 mt-3">
@@ -214,13 +217,13 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
                   <figure class="mb-0 icon-bg">
                     <img
-                      src="assets/images/games/game-icon05.png"
+                      src="assets/images/games/ludo.png"
                       class="img-fluid rounded-circle"
                       alt="Fantasy Games"
                     />
@@ -238,13 +241,13 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
                   <figure class="mb-0 icon-bg">
                     <img
-                      src="assets/images/games/game-icon06.png"
+                      src="assets/images/games/game-icon11.png"
                       class="img-fluid rounded-circle"
                       alt="Fantasy Games"
                     />
@@ -262,19 +265,19 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
                   <figure class="mb-0 icon-bg">
                     <img
-                      src="assets/images/games/game-icon07.png"
+                      src="assets/images/games/blackjack-resize.jpg"
                       class="img-fluid rounded-circle"
                       alt="Fantasy Games"
                     />
                   </figure>
                   <h3 class="h5 fw-bold theme-text-primary mb-3 mt-3">
-                    Chees Leader
+                    Black Jack
                   </h3>
                   <button
                     onclick="goToWhatsapp()"
@@ -286,13 +289,13 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
                   <figure class="mb-0 icon-bg">
                     <img
-                      src="assets/images/games/game-icon08.png"
+                      src="assets/images/games/game-icon10.png"
                       class="img-fluid rounded-circle"
                       alt="Fantasy Games"
                     />
@@ -310,19 +313,19 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
                   <figure class="mb-0 icon-bg">
                     <img
-                      src="assets/images/games/game-icon09.png"
+                      src="assets/images/games/carrom.png"
                       class="img-fluid rounded-circle"
                       alt="Fantasy Games"
                     />
                   </figure>
                   <h3 class="h5 fw-bold theme-text-primary mb-3 mt-3">
-                    Carrom Play
+                    Carrom 
                   </h3>
                   <button
                     onclick="goToWhatsapp()"
@@ -334,13 +337,13 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
                   <figure class="mb-0 icon-bg">
                     <img
-                      src="assets/images/games/game-icon10.png"
+                      src="assets/images/games/game-icon08.png"
                       class="img-fluid rounded-circle"
                       alt="Fantasy Games"
                     />
@@ -358,13 +361,13 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
                   <figure class="mb-0 icon-bg">
                     <img
-                      src="assets/images/games/game-icon11.png"
+                      src="assets/images/games/game-icon05.png"
                       class="img-fluid rounded-circle"
                       alt="Fantasy Games"
                     />
@@ -382,7 +385,7 @@
                 </div>
               </div>
               <!-- repetable -->
-              <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
+              <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
                 <div
                   class="game-card theme-border-radius theme-bg-white text-center py-4 mb-4"
                 >
@@ -440,7 +443,7 @@
                 <img
                   class="cursor-pointer"
                   onclick="goToWhatsapp()"
-                  src="/html/assets/svg/WhatsAppButtonGreenLarge.svg"
+                  src="./assets//images/WhatsAppButtonGreenSmall.png"
                   alt="whatsapp"
                 />
               </div>
@@ -484,7 +487,8 @@
     <script src="assets/js/main.js"></script>
     <script type="text/javascript">
       function goToWhatsapp() {
-        var url = "https://wa.me/08231231412?text=Halo%20name%20maya%20nadine";
+        var url =
+          "https://wa.me/+447424524837?text=Hello%20Sir,%20I%20Need%20Fairbet.biz%20ID%20I%20WANT%20TO%20DEPOSITE";
         const newTab = window.open(url, "_blank");
         newTab.focus();
       }
