--- a/games.html
+++ b/games.html
@@ -69,7 +69,7 @@
               <a
                 class="rounded-pill btn custom-btn-secondary font-small primary-btn-effect"
                 onclick="goToWhatsapp()"
-                >Play Now</a
+                >Join Now</a
               >
             </li>
           </ul>
